# mcp-servers

./: README.md
calculator/: README.md  pyproject.toml
calculator/src/mcp_server_calculator/: __main__.py  server.py
