[project]
name = "mcp-server-calculator"
version = "0.1.0"
description = "A Model Context Protocol server providing tools to perform calculations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
]

[project.scripts]
mcp-server-calculator = "mcp_server_calculator:main"
